    "window" parameters
* tags
  - new tags "Grouping" (for ID3 "TIT1") and "Work"
* input
  - ffmpeg: allow partial reads
* archive
  - iso9660: support seeking
* filter
  - ffmpeg: new plugin based on FFmpeg's libavfilter library
  - hdcd: new plugin based on FFmpeg's "af_hdcd" for HDCD playback
  - volume: convert S16 to S24 to preserve quality and reduce dithering noise
* switch to C++17
  - GCC 7 or clang 4 (or newer) recommended

ver 0.21.12 (2019/08/03)
* decoder
  - mad: update bit rate after seeking
  - mad: fix several bugs preventing the plugin from decoding the last frame
  - opus: ignore case in replay gain tag names
  - opus, vorbis: decode the "end of stream" packet
* output
  - jack: fix mono-to-stereo conversion
* player
  - don't restart unseekable song after failed seek attempt
* Windows
  - support backslash in relative URIs loaded from playlists

ver 0.21.11 (2019/07/03)
* input
  - tidal: deprecated because Tidal has changed the protocol
* decoder
  - wildmidi: log error if library initialization fails
* output
  - alsa: fix busy loop while draining
  - alsa: fix missing drain call
  - alsa: improve xrun-avoiding silence generator
  - alsa: log when generating silence due to slow decoder
  - alsa, osx: fix distortions with DSD_U32 and DoP on 32 bit CPUs
* protocol
  - fix "list" with multiple "group" levels

ver 0.21.10 (2019/06/05)
* decoder
  - opus: fix duplicate tags
* output
  - httpd: reject some well-known URIs
* fix crash bug (0.21.9 regression)

ver 0.21.9 (2019/05/20)
* input
  - buffer: fix deadlock bug
* Android
  - fix crash on ARMv7
  - request storage permission on Android 6+
* fix spurious "single" mode bug

ver 0.21.8 (2019/04/23)
* input
  - smbclient: download to buffer instead of throttling transfer
* output
  - httpd: add missing mutex lock
  - httpd: fix use-after-free bug
* playlist
  - soundcloud: fix "Unsupported URI scheme" (0.21.6 regression)
* fix Bonjour bug
* fix build failure with GCC 9